src/objects/T_Event__c.object
<CustomObject>
    <fields>
        <fullName>Default_Address__c</fullName>
        <label>Default Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Driver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Driver</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>T_Events</relationshipLabel>
        <relationshipName>T_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_End_Time__c</fullName>
        <label>Default_End_Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Start_Time__c</fullName>
        <label>Default_Start_Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Vehicle</label>
        <referenceTo>T_Event__c</referenceTo>
        <relationshipLabel>T_Events</relationshipLabel>
        <relationshipName>T_Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>if vehicle is equipped with any special equipment (example- wheel chair access, defibrillator,etc)</description>
        <label>Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Service_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Service Location</label>
        <referenceTo>Service_Location__c</referenceTo>
        <relationshipLabel>T_Events</relationshipLabel>
        <relationshipName>T_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Common pick up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common drop off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Transportation</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vehicle_Capacity__c</fullName>
        <label>Vehicle Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Owner_Other__c</fullName>
        <label>Vehicle Owner Describe</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year_Make_Model__c</fullName>
        <label>Vehicle Year/Make/Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_owner__c</fullName>
        <label>Vehicle Owner</label>
        <picklist>
            <picklistValues>
                <fullName>TMN</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-TMN</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>T_Event</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_Events</pluralLabel>
    <recordTypes>
        <fullName>Route</fullName>
        <active>true</active>
        <description>The routes associated to a service location</description>
        <label>Route</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle</fullName>
        <active>true</active>
        <label>Vehicle</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>